--- a/plugins/dynamix/styles/default-white.css
+++ b/plugins/dynamix/styles/default-white.css
@@ -230,7 +230,7 @@ div.user-list{float:left;padding:10px;margin-right:10px;margin-bottom:24px;borde
 div.user-list img{width:auto;max-width:48px;height:48px;margin-bottom:16px}
 div.up{margin-top:-20px;border:1px solid #e3e3e3;padding:4px 6px;overflow:auto}
 div.spinner{margin:48px auto;text-align:center}
-div.spinner.fixed{display:none;position:absolute;left:46%;top:96px;margin:0}
+div.spinner.fixed{display:none;position:fixed;top:50%;left:50%;margin-left:-64px}
 div.spinner .unraid_mark{height:64px}
 div.spinner .unraid_mark_2,div .unraid_mark_4{animation:mark_2 1.5s ease infinite}
 div.spinner .unraid_mark_3{animation:mark_3 1.5s ease infinite}
@@ -255,6 +255,7 @@ label.checkbox input{position:absolute;opacity:0;cursor:pointer}
 span.checkmark{position:absolute;top:0;left:6px;height:14px;width:14px;background-color:#e3e3e3}
 label.checkbox:hover input ~ .checkmark{background-color:#b3b3b3}
 label.checkbox input:checked ~ .checkmark {background-color:#ff8c2f}
+label.checkbox input:disabled ~ .checkmark {opacity:0.5}
 span.checkmark:after{content:'';position:absolute;display:none}
 label.checkbox input:checked ~ .checkmark:after{display:block}
 label.checkbox .checkmark:after{left:4px;top:0;width:3px;height:8px;border:solid white;border-width:0 3px 3px 0;-webkit-transform:rotate(45deg);-ms-transform:rotate(45deg);transform:rotate(45deg)}
