--- a/plugins/dynamix/styles/default-gray.css
+++ b/plugins/dynamix/styles/default-gray.css
@@ -242,7 +242,7 @@ div.vmtemplate{height:120px;width:120px;border:1px solid #0C0F0B}
 div.vmtemplate img{margin-top:20px}
 div.up{margin-top:-20px;border:1px solid #0C0F0B;padding:4px 6px;overflow:auto}
 div.spinner{margin:48px auto;text-align:center}
-div.spinner.fixed{display:none;position:fixed;top:50%;left:50%;margin-left:-64px}
+div.spinner.fixed{display:none;position:fixed;top:50%;left:50%;margin-top:-16px;margin-left:-64px}
 div.spinner .unraid_mark{height:64px}
 div.spinner .unraid_mark_2,div .unraid_mark_4{animation:mark_2 1.5s ease infinite}
 div.spinner .unraid_mark_3{animation:mark_3 1.5s ease infinite}
