VM/Docker filetree css corrections

--- a/plugins/dynamix.vm.manager/VMSettings.page
+++ b/plugins/dynamix.vm.manager/VMSettings.page
@@ -59,10 +59,11 @@ foreach ($arrSyslinuxCfg as &$strSyslinuxCfg) {
 	body { -webkit-overflow-scrolling: touch;}
 	.errortext{color:#EF3D47;display:none;}
 	.fileTree {
-		background:#808080;
+		background:<?=strstr('white,azure',$display['theme'])?'#f2f2f2':'#1c1c1c'?>;
 		width: 305px;
 		max-height: 150px;
 		overflow-y: scroll;
+		overflow-x: hidden;
 		position: absolute;
 		z-index: 100;
 		display: none;
