--- a/plugins/dynamix.vm.manager/VMSettings.page
+++ b/plugins/dynamix.vm.manager/VMSettings.page
@@ -115,7 +115,7 @@ Libvirt vdisk size:
 Libvirt storage location:
 : <input id="IMAGE_FILE" type="text" name="IMAGE_FILE" value="<?=htmlspecialchars($domain_cfg['IMAGE_FILE']);?>" placeholder="e.g. /mnt/user/system/libvirt/libvirt.img" data-pickcloseonfile="true" data-pickfilter="img" data-pickroot="/mnt/" data-pickfolders="true" required="required" /> <?php if (file_exists($domain_cfg['IMAGE_FILE'])) { ?><span id="deletePanel"><label><input type="checkbox" id="deleteCheckbox" /> Delete Image File</label></span><?php } ?> <?if ($var['fsState'] != "Started"):?><span><i class="fa fa-warning icon warning"></i> Modify with caution: unable to validate path until Array is Started</span><?elseif (!is_dir(dirname($domain_cfg['IMAGE_FILE']))):?><span><i class="fa fa-warning icon warning"></i> Path does not exist</span><?endif;?> <span id="IMAGE_ERROR" class="errortext"></span>
 
-> You must specify an image file for Libvirt.  The system will automatically create this file when the Libvirt service is first started.
+> You must specify an image file for Libvirt. The system will automatically create this file when the Libvirt service is first started.
 
 <?endif;?>
 Default VM storage path:
@@ -165,8 +165,11 @@ Default network bridge:
   <?foreach ($arrValidBridges as $strBridge) echo mk_option($domain_cfg['BRNAME'], $strBridge, $strBridge);?>
   </select>
 
-> Select the name of the network bridge you wish to use as default for your VMs, the setting 'virbr0' will let libvirt create a virtual bridge that utilizes NAT (network address translation) and act as a DHCP server to hand out IP addresses to virtual machines directly.
+> Select the name of the network bridge you wish to use as default for your VMs,
+> the setting 'virbr0' will let libvirt create a virtual bridge that utilizes NAT (network address translation)
+> and act as a DHCP server to hand out IP addresses to virtual machines directly.
 > More optional selections are present when virtual bridges are created under network settings.
+>
 > NOTE: You can also specify a network bridge on a per-VM basis.
 
 Upon host shutdown:
@@ -176,7 +179,8 @@ Upon host shutdown:
   ?>
   </select>
 
-> When shutting down the server, this defines the action to take upon running VMs. If <em>Hibernate VMs</em> is chosen, the VM will be instructed to hibernate (if supported) otherwise it will attempt a VM shutdown.
+> When shutting down the server, this defines the action to take upon running VMs. If <em>Hibernate VMs</em> is chosen,
+> the VM will be instructed to hibernate (if supported) otherwise it will attempt a VM shutdown.
 
 VM shutdown time-out:
 : <input type="number" id="vm_shutdown_timeout" name="TIMEOUT" value="<?=htmlspecialchars($domain_cfg['TIMEOUT'])?>" class="narrow">
