VMsettings code optimization

--- a/plugins/dynamix.vm.manager/VMSettings.page
+++ b/plugins/dynamix.vm.manager/VMSettings.page
@@ -49,6 +49,7 @@ foreach ($arrSyslinuxCfg as &$strSyslinuxCfg) {
     break;
   }
 }
+$bgcolor = strstr('white,azure',$display['theme']) ? '#f2f2f2' : '#1c1c1c';
 ?>
 <link type="text/css" rel="stylesheet" href="<?autov('/plugins/dynamix.vm.manager/styles/dynamix.vm.manager.css')?>">
 <link type="text/css" rel="stylesheet" href="<?autov('/webGui/styles/jquery.filetree.css')?>">
@@ -57,7 +58,7 @@ foreach ($arrSyslinuxCfg as &$strSyslinuxCfg) {
 <style>
 body{-webkit-overflow-scrolling:touch}
 .errortext{color:#EF3D47;display:none}
-.fileTree{background:<?=strstr('white,azure',$display['theme'])?'#f2f2f2':'#1c1c1c'?>;width:305px;max-height:150px;overflow-y:scroll;overflow-x:hidden;position:absolute;z-index:100;display:none}
+.fileTree{background:<?=$bgcolor?>;width:305px;max-height:150px;overflow-y:scroll;overflow-x:hidden;position:absolute;z-index:100;display:none}
 .basic{display:block}
 .advanced{display:none}
 #winvirtio{display:none}
