--- a/plugins/dynamix/HardwareProfile.page
+++ b/plugins/dynamix/HardwareProfile.page
@@ -70,4 +70,4 @@ This utility is used for troubleshooting purposes. It will collect all of the sy
 
 <input type="button" value="Upload" onclick="upload()"><input type="button" value="Done" onclick="done()">
 
-<br><div id="pleaseWait" style="display:none;font-weight:bold;color:blue;text-align:center">Please wait, uploading hardware information...</div>
+<br><div id="pleaseWait" style="display:none;font-weight:bold;color:blue;text-align:center">Please wait... uploading hardware information (this may take several minutes)</div>
