css correction for button "check for updates"

--- a/plugins/dynamix.plugin.manager/Update.page
+++ b/plugins/dynamix.plugin.manager/Update.page
@@ -32,7 +32,12 @@ if (file_exists('/boot/previous/changes.txt')) {
   $branch = strpos($version,'rc')===false ? 'Stable' : 'Next';
 }
 ?>
-<style>input[value='Install'],input[value='Update'],input[value='Restore']{margin:0}</style>
+<style>
+input[value='Install'],input[value='Update'],input[value='Restore']{margin:0}
+<?if (strstr('white,black',$display['theme'])):?>
+span.vhshift{margin-top:30px!important;margin-right:-20px!important}
+<?endif;?>
+</style>
 <script>
 var original = null;
 
