--- a/plugins/dynamix/Disk.page
+++ b/plugins/dynamix/Disk.page
@@ -36,6 +36,9 @@ div.clone2{position:absolute;right:0;margin-top:48px}
 select.clone{min-width:144px;margin-right:0}
 input.clone{margin-left:8px;margin-right:0}
 span.clone,i.clone{margin-right:4px}
+<?if (strstr('white,black',$display['theme'])):?>
+span.vhshift{margin-top:30px!important;margin-right:-20px!important}
+<?endif;?>
 </style>
 <script>
 var ctrl = "<span class='ctrl2 status <?=$tabbed?'vhshift':'vshift'?>'><a href='/Shares/Disk?name=<?=$prev?>' title='previous disk share'><button type='button' style='margin-right:4px'><i class='fa fa-chevron-left fa-fw'></i></button></a><a href='/Shares/Disk?name=<?=$next?>' title='next disk share'><button type='button'><i class='fa fa-chevron-right fa-fw'></i></button></a></span>";
