--- a/plugins/dynamix/styles/default-azure.css
+++ b/plugins/dynamix/styles/default-azure.css
@@ -47,9 +47,9 @@ form+p{display:none}
 #header .logo{float:left;margin-top:25px;margin-left:76px}
 #header .logo svg{margin-right:180px;height:40px}
 #header .logo a span{color:#ff8c2f;font-size:24px;float:right}
-#header .block{margin:4px 10px 0 0;float:right;text-align:right;background-color:rgba(244,242,244,0.5);color:#373F49;border-radius:10px;padding:2px 8px}
+#header .block{margin:2px 2px 0 0;float:right;text-align:right;background-color:rgba(244,242,244,0.5);color:#373F49;border-radius:10px;padding:5px 10px}
 #header .text-left{float:left;text-align:right;padding-right:5px;border-right:solid medium #5D6833}
-#header .text-right{float:right;text-align:left;padding-left:5px;padding-right:20px}
+#header .text-right{float:right;text-align:left;padding-left:5px;min-width:130px}
 #header .text-right a{color:#ff8c2f}
 #header #licensetype{font-weight:bold;font-style:italic}
 #menu{position:fixed;top:0;left:0;bottom:12px;width:65px;padding:0;margin:0;background:#383A34;z-index:100;box-shadow:inset -1px 0 2px #EDEAEF}
