--- a/plugins/dynamix/styles/default-black.css
+++ b/plugins/dynamix/styles/default-black.css
@@ -50,7 +50,7 @@ input.trim{width:50px}
 #header .logo a span{color:#ff8c2f;font-size:24px;float:right}
 #header .block{margin:2px 2px 0 0;float:right;text-align:right;background-color:rgba(242,242,242,0.4);border-radius:10px;padding:5px 10px}
 #header .text-left{float:left;text-align:right;color:#1c1c1c;padding-right:5px;border-right:solid medium #f15a2c}
-#header .text-right{float:right;color:#1c1c1c;text-align:left;padding-left:5px;min-width:130px}
+#header .text-right{float:right;color:#1c1c1c;text-align:left;padding-left:5px}
 #header .text-right a{color:#ff8c2f}
 #header #licensetype{font-weight:bold;font-style:italic}
 #title{margin:20px 0 32px 0;padding:8px 10px;clear:both;border-bottom:#2b2b2b 1px solid;background:#262626;letter-spacing:2px}
