--- a/plugins/dynamix/styles/default-gray.css
+++ b/plugins/dynamix/styles/default-gray.css
@@ -49,7 +49,7 @@ form+p{display:none}
 #header .logo a span{color:#ff8c2f;font-size:24px;float:right}
 #header .block{margin:2px 2px 0 0;float:right;text-align:right;background-color:rgba(27,29,27,0.5);color:#99A5B2;border-radius:10px;padding:5px 10px}
 #header .text-left{float:left;text-align:right;padding-right:5px;border-right:solid medium #5D6833}
-#header .text-right{float:right;text-align:left;padding-left:5px;min-width:130px}
+#header .text-right{float:right;text-align:left;padding-left:5px}
 #header .text-right a{color:#ff8c2f}
 #header #licensetype{font-weight:bold;font-style:italic}
 #menu{position:fixed;top:0;left:0;bottom:12px;width:65px;padding:0;margin:0;background:#383A34;z-index:100;box-shadow:inset -1px 0 2px #121510}
