--- a/plugins/dynamix/styles/default-azure.css
+++ b/plugins/dynamix/styles/default-azure.css
@@ -46,8 +46,8 @@ form+p{display:none}
 #header{position:fixed;top:0;left:0;width:100%;height:90px;z-index:100;margin:0;background-color:#EDEAEF;background-size:100% 90px;border-bottom:#9794A0 1px solid}
 #header .logo{float:left;margin-top:25px;margin-left:76px}
 #header .logo svg{margin-right:180px;height:40px}
-#header .logo a span{color:#ff8c2f;font-size:24px;float:right}
-#header .block{margin:2px 2px 0 0;float:right;text-align:right;background-color:rgba(244,242,244,0.5);color:#373F49;border-radius:10px;padding:5px 10px}
+#header .logo a span{color:#ff8c2f;font-size:24px;font-weight:bold;float:right;background-color:rgba(244,242,244,0.4);border-radius:10px;padding:6px 20px}
+#header .block{margin:2px 2px 0 0;float:right;text-align:right;background-color:rgba(244,242,244,0.4);color:#373F49;border-radius:10px;padding:5px 10px}
 #header .text-left{float:left;text-align:right;padding-right:5px;border-right:solid medium #5D6833}
 #header .text-right{float:right;text-align:left;padding-left:5px}
 #header .text-right a{color:#ff8c2f}
