--- a/plugins/dynamix/styles/default-black.css
+++ b/plugins/dynamix/styles/default-black.css
@@ -47,7 +47,7 @@ input.trim{width:50px}
 #header.image{background-size:100% 90px;background-repeat:no-repeat;color:#1c1c1c}
 #header .logo{float:left;margin-top:34px;margin-left:11px}
 #header .logo svg{margin-right:180px;height:40px}
-#header .logo a span{color:#ff8c2f;font-size:24px;float:right}
+#header .logo a span{color:#ff8c2f;font-size:24px;font-weight:bold;float:right;background-color:rgba(242,242,242,0.4);border-radius:10px;padding:6px 20px}
 #header .block{margin:2px 2px 0 0;float:right;text-align:right;background-color:rgba(242,242,242,0.4);border-radius:10px;padding:5px 10px}
 #header .text-left{float:left;text-align:right;color:#1c1c1c;padding-right:5px;border-right:solid medium #f15a2c}
 #header .text-right{float:right;color:#1c1c1c;text-align:left;padding-left:5px}
