--- a/plugins/dynamix/ShareList.page
+++ b/plugins/dynamix/ShareList.page
@@ -20,6 +20,7 @@ function displayShares(all) {
   if (all == 'yes') {
     $.cookie('ssz','ssz',{path:'/'});
     $('#share_list').html("<tr><td colspan='8'><div class='spinner'></div></td></tr>");
+    $('div.spinner').html(unraid_logo);
   }
   $.get('/webGui/include/ShareList.php',{compute:all,path:'<?=addslashes(htmlspecialchars($path))?>',scale:'<?=$display['scale']?>',number:'<?=$display['number']?>',fill:$.cookie('ssz')},function(data){
     $.removeCookie('ssz',{path:'/'})
