--- a/plugins/dynamix/styles/default-gray.css
+++ b/plugins/dynamix/styles/default-gray.css
@@ -1,5 +1,5 @@
 html{font-family:clear-sans;height:100%}
-body{font-size:14px;color:#606E7F;background-color:#1B1D1B;padding:0;margin:0;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}
+body{font-size:14px;color:#606e7f;background-color:#1b1d1b;padding:0;margin:0;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}
 @media (max-width:1280px){#template{min-width:1280px;margin:0}}
 @media (min-width:1281px){#template{min-width:1280px;margin:0}}
 @media (min-width:1921px){#template{min-width:1280px;max-width:1920px;margin:0 auto}}
@@ -7,11 +7,11 @@ img{border:0;text-decoration:none;vertical-align:middle}
 p{text-align:left}
 p.centered{text-align:left}
 a:hover{text-decoration:underline}
-a{color:#486DBA;text-decoration:none}
-a.none{color:#606E7F}
+a{color:#486dba;text-decoration:none}
+a.none{color:#606e7f}
 a.img{text-decoration:none;border:none}
 a.info{position:relative}
-a.info span{display:none;white-space:nowrap;font-variant:small-caps;position:absolute;top:16px;left:10px;color:#B0B0B0;font-size:13px;line-height:20px;padding:5px 8px;border:1px solid #42453E;border-radius:3px;background-color:#121510}
+a.info span{display:none;white-space:nowrap;font-variant:small-caps;position:absolute;top:16px;left:10px;color:#b0b0b0;font-size:13px;line-height:20px;padding:5px 8px;border:1px solid #42453e;border-radius:3px;background-color:#121510}
 a.info:hover span{display:block;z-index:1}
 a.nohand{cursor:default}
 i.spacing{margin-left:0;margin-right:10px}
@@ -20,21 +20,21 @@ i.title{display:none}
 pre ul{margin:0;padding-top:0;padding-bottom:0;padding-left:28px}
 pre li{margin:0;padding-top:0;padding-bottom:0;padding-left:18px}
 big{font-size:15px;font-weight:bold;text-transform:uppercase}
-hr{border:none;height:1px!important;color:#606E7F;background-color:#606E7F}
-input[type=text],input[type=password],input[type=number],input[type=url],input[type=email],input[type=date],input[type=file],textarea,.textarea{font-family:clear-sans;font-size:14px;background:transparent;border:1px solid #606E7F;padding:5px 10px;min-height:20px;line-height:20px;outline:none;width:304px;margin:0 20px 0 0;box-shadow:none;color:#606E7F}
-input[type=button],input[type=reset],input[type=submit],button,button[type=button],a.button{font-family:clear-sans;font-size:13px;border:1px solid #606E7F;border-radius:5px;margin:10px 20px 10px 0;padding:8px 12px;cursor:pointer;outline:none;color:#606E7F;background:#121510}
+hr{border:none;height:1px!important;color:#606e7f;background-color:#606e7f}
+input[type=text],input[type=password],input[type=number],input[type=url],input[type=email],input[type=date],input[type=file],textarea,.textarea{font-family:clear-sans;font-size:14px;background:transparent;border:1px solid #606e7f;padding:5px 10px;min-height:20px;line-height:20px;outline:none;width:304px;margin:0 20px 0 0;box-shadow:none;color:#606e7f}
+input[type=button],input[type=reset],input[type=submit],button,button[type=button],a.button{font-family:clear-sans;font-size:13px;border:1px solid #606e7f;border-radius:5px;margin:10px 20px 10px 0;padding:8px 12px;cursor:pointer;outline:none;color:#606e7f;background:#121510}
 input[type=checkbox]{vertical-align:middle;margin-right:6px}
 input[type=number]::-webkit-outer-spin-button,input[type=number]::-webkit-inner-spin-button{-webkit-appearance:none}
 input[type=number]{-moz-appearance:textfield}
-input:focus[type=text],input:focus[type=password],input:focus[type=number],input:focus[type=url],input:focus[type=file],input:focus[type=email],textarea:focus{background:#121510;border-color:#0072C6}
-input:hover[type=button],input:hover[type=reset],input:hover[type=submit],button:hover,button:hover[type=button],a.button:hover{border-color:#0072C6;color:#B0B0B0}
-input:active[type=button],input:active[type=reset],input:active[type=submit],button:active,button:active[type=button],a.button:active{border-color:#0072C6;box-shadow:none}
-input[disabled],button[disabled],input:hover[type=button][disabled],input:hover[type=reset][disabled],input:hover[type=submit][disabled],button:hover[disabled],button:hover[type=button][disabled],input:active[type=button][disabled],input:active[type=reset][disabled],input:active[type=submit][disabled],button:active[disabled],button:active[type=button][disabled],textarea[disabled]{color:#808080;border-color:#808080;background:#383A34;opacity:0.3;cursor:default}
-input::-webkit-input-placeholder{color:#00529B}
-select{font-family:clear-sans;font-size:14px;min-width:188px;max-width:326px;padding:6px 6px;margin:0 10px 0 0;border:#606E7F 1px solid;box-shadow:none;color:#606E7F;background:transparent;outline:none;display:inline-block;cursor:pointer}
-select option{color:#606E7F;background-color:#121510}
-select:focus{border-color:#0072C6}
-select[disabled]{color:#808080;border-color:#808080;background:#383A34;opacity:0.3;cursor:default}
+input:focus[type=text],input:focus[type=password],input:focus[type=number],input:focus[type=url],input:focus[type=file],input:focus[type=email],textarea:focus{background:#121510;border-color:#0072c6}
+input:hover[type=button],input:hover[type=reset],input:hover[type=submit],button:hover,button:hover[type=button],a.button:hover{border-color:#0072c6;color:#b0b0b0}
+input:active[type=button],input:active[type=reset],input:active[type=submit],button:active,button:active[type=button],a.button:active{border-color:#0072c6;box-shadow:none}
+input[disabled],button[disabled],input:hover[type=button][disabled],input:hover[type=reset][disabled],input:hover[type=submit][disabled],button:hover[disabled],button:hover[type=button][disabled],input:active[type=button][disabled],input:active[type=reset][disabled],input:active[type=submit][disabled],button:active[disabled],button:active[type=button][disabled],textarea[disabled]{color:#808080;border-color:#808080;background:#383a34;opacity:0.3;cursor:default}
+input::-webkit-input-placeholder{color:#00529b}
+select{font-family:clear-sans;font-size:14px;min-width:188px;max-width:326px;padding:6px 6px;margin:0 10px 0 0;border:#606e7f 1px solid;box-shadow:none;color:#606e7f;background:transparent;outline:none;display:inline-block;cursor:pointer}
+select option{color:#606e7f;background-color:#121510}
+select:focus{border-color:#0072c6}
+select[disabled]{color:#808080;border-color:#808080;background:#383a34;opacity:0.3;cursor:default}
 select[name=enter_view]{padding:0;float:right}
 select[name=enter_share]{padding:0;float:right}
 select.narrow{min-width:87px}
@@ -43,22 +43,22 @@ select.slot{min-width:440px;max-width:440px}
 input.narrow{width:166px}
 input.trim{width:50px}
 form+p{display:none}
-#header{position:fixed;top:0;left:0;width:100%;height:90px;z-index:100;margin:0;background-color:#121510;background-size:100% 90px;border-bottom:#42453E 1px solid}
-#header .logo{float:left;margin-top:25px;margin-left:76px}
-#header .logo svg{margin-right:180px;height:40px}
-#header .logo a span{color:#ff8c2f;font-size:24px;font-weight:bold;float:right;background-color:rgba(27,29,27,0.4);border-radius:10px;padding:6px 20px}
-#header .block{margin:2px 2px 0 0;float:right;text-align:right;background-color:rgba(27,29,27,0.4);color:#99A5B2;border-radius:10px;padding:5px 10px}
-#header .text-left{float:left;text-align:right;padding-right:5px;border-right:solid medium #5D6833}
+#header{position:fixed;top:0;left:0;width:100%;height:90px;z-index:100;margin:0;background-color:#121510;background-size:100% 90px;border-bottom:#42453e 1px solid}
+#header .logo{float:left;margin-left:75px;color:#e22828;font-size:24px;font-weight:bold;letter-spacing:2px}
+#header .logo svg{height:28px;display:block;margin:17px 50px 4px 0}
+#header .logo #licensetype{font-style:italic}
+#header .logo a{color:#e22828}
+#header .logo a span{margin-left:40px;letter-spacing:0}
+#header .block{margin:0;float:right;text-align:right;background-color:rgba(18,21,16,0.7);padding:7px 12px}
+#header .text-left{float:left;text-align:right;padding-right:5px;border-right:solid medium #f15a2c}
 #header .text-right{float:right;text-align:left;padding-left:5px}
-#header .text-right a{color:#ff8c2f}
-#header #licensetype{font-weight:bold;font-style:italic}
-#menu{position:fixed;top:0;left:0;bottom:12px;width:65px;padding:0;margin:0;background:#383A34;z-index:100;box-shadow:inset -1px 0 2px #121510}
+#menu{position:fixed;top:0;left:0;bottom:12px;width:65px;padding:0;margin:0;background:#383a34;z-index:100;box-shadow:inset -1px 0 2px #121510}
 #nav-block{position:absolute;top:0;bottom:12px;color:#5D6833;white-space:nowrap;float:left;overflow-y:scroll;direction:rtl;letter-spacing:2px}
 #nav-block::-webkit-scrollbar{display:none}
 #nav-block{-ms-overflow-style:none;overflow:-moz-scrollbars-none}
 #nav-block.mozilla{margin-left:-17px;overflow-y:scroll}
 #nav-block>div{direction:ltr}
-#nav-item{width:40px;text-align:left;padding:14px 24px 14px 0;border-bottom:#42453E 1px solid;font-size:18px;overflow:hidden;transition:.2s background-color ease}
+#nav-item{width:40px;text-align:left;padding:14px 24px 14px 0;border-bottom:#42453e 1px solid;font-size:18px;overflow:hidden;transition:.2s background-color ease}
 #nav-item:hover{width:170px;color:#5D6833;background:#ABC056;border-bottom-color:#5D6833;-webkit-transition:all 0.2s ease-in-out;transition:all 0.2s ease-in-out}
 #nav-item:hover a{color:#5D6833;background:#ABC056}
 #nav-item img{display:none}
@@ -70,11 +70,11 @@ form+p{display:none}
 #nav-item a i{display:none}
 #nav-user{display:block;float:left;text-align:center;border:none}
 #nav-user.probe{font-size:11px;margin-left:3px;margin-right:8px}
-#nav-tub1{position:fixed;top:56px;left:380px}
-#nav-tub2{position:fixed;top:56px;left:410px}
-#nav-tub3{position:fixed;top:56px;left:440px}
+#nav-tub1{position:fixed;top:56px;right:350px}
+#nav-tub2{position:fixed;top:56px;right:320px}
+#nav-tub3{position:fixed;top:56px;right:290px}
 span.tub span[id^='txt-tub']{margin-top:7px}
-#title{color:#39587f;margin:20px 0 10px 0;padding:10px 0;clear:both;background:#1B1D1B;border-bottom:#606E7F 1px solid;letter-spacing:2px}
+#title{color:#39587f;margin:20px 0 10px 0;padding:10px 0;clear:both;background:#1b1d1b;border-bottom:#606e7f 1px solid;letter-spacing:2px}
 #title span.left{font-size:20px;text-transform:uppercase}
 #title span.right{font-size:20px;padding-right:10px;float:right}
 #title span img,#title p{display:none}
@@ -93,12 +93,12 @@ span.tub span[id^='txt-tub']{margin-top:7px}
 .orange-text,.warning{color:#E68A00}
 .blue-text{color:#3B5998}
 .grey-text{color:#606060}
-.usage-bar{position:fixed;top:60px;left:470px;height:22px;line-height:22px;width:140px;background-color:rgba(27,29,27,0.2)}
-.usage-bar>span{display:block;height:3px;background-color:#606E7F;text-align:left}
-.usage-bar>span>span{padding-left:4px;color:#606E7F}
+.usage-bar{position:fixed;top:60px;right:400px;height:22px;line-height:22px;width:140px;background-color:rgba(27,29,27,0.2)}
+.usage-bar>span{display:block;height:3px;background-color:#606e7f;text-align:left}
+.usage-bar>span>span{padding-left:4px;color:#606e7f}
 .usage-disk{height:25px;line-height:25px;background-color:rgba(18,21,16,0.3)}
-.usage-disk>span{display:block;height:3px;background-color:#606E7F;text-align:left}
-.usage-disk>span>span{font-size:13px;color:#606E7F}
+.usage-disk>span{display:block;height:3px;background-color:#606e7f;text-align:left}
+.usage-disk>span>span{font-size:13px;color:#606e7f}
 .usage-disk.sys{background-color:transparent}
 .usage-disk.sys>span{font-size:13px}
 .usage-disk.all{background-color:transparent}
@@ -111,10 +111,10 @@ span.tub span[id^='txt-tub']{margin-top:7px}
 .graybar{background:-webkit-radial-gradient(#949494,#D9D9D9);background:linear-gradient(#949494,#D9D9D9)}
 table{border-collapse:collapse;border-spacing:0;margin:0;width:100%}
 table.preclear{margin-top:0}
-table tbody tr.tr_last{border-bottom:1px solid #606E7F}
-table td.cpu-info{border:1px solid #0072C6}
+table tbody tr.tr_last{border-bottom:1px solid #606e7f}
+table td.cpu-info{border:1px solid #0072c6}
 table.disk_status{white-space:nowrap}
-table.disk_status thead tr:first-child td{text-transform:uppercase;color:#42453E;border-bottom:#606E7F 1px solid}
+table.disk_status thead tr:first-child td{text-transform:uppercase;color:#42453e;border-bottom:#606e7f 1px solid}
 table.disk_status td span{margin-left:10px}
 table.disk_status tr>td{width:8%;padding:10px 10px 10px 0;white-space:nowrap}
 table.disk_status tr>td+td{width:auto}
@@ -136,13 +136,13 @@ table.settings tr>td+td{line-height:16px}
 table.settings.shifted{padding:0;margin-left:0;margin-top:0}
 table.settings.shifted td:first-child{padding-left:0}
 table.share_status{white-space:nowrap;margin-top:12px}
-table.share_status thead tr:first-child td{text-transform:uppercase;color:#42453E;border-bottom:#606E7F 1px solid}
+table.share_status thead tr:first-child td{text-transform:uppercase;color:#42453e;border-bottom:#606e7f 1px solid}
 table.share_status tr>td{text-align:left;padding-left:12px}
 table.share_status tr>td+td{padding-left:0}
 table.share_status tr.share_status_size>td{padding-left:40px}
 table.share_status tr.share_status_size>td+td{padding-left:15px}
 table.share_status tbody tr{border-bottom:#0C0F0B 1px solid;line-height:30px}
-table.share_status tbody tr:last-child td{border-bottom:#606E7F 1px solid}
+table.share_status tbody tr:last-child td{border-bottom:#606e7f 1px solid}
 table.share_status tbody tr.alert{color:#F0000C;background-color:#FF9E9E}
 table.share_status tbody tr.warn{color:#E68A00;background-color:#FEEFB3}
 table.share_status.share tr td:last-child{width:4%;text-align:right;padding-right:10px}
@@ -155,8 +155,8 @@ table.share_status.table{margin-top:36px}
 table.share_status.table tr>td{width:50%}
 table.share_status.dash{float:left;width:35%;margin-top:36px;margin-right:6px;border:none}
 table.share_status.dash thead tr:first-child td{line-height:30px}
-table.share_status.dash thead tr:last-child>td{border-bottom:1px solid #606E7F;text-align:left;color:#606E7F}
-table.share_status.dash tbody td.blue{color:#606E7F}
+table.share_status.dash thead tr:last-child>td{border-bottom:1px solid #606e7f;text-align:left;color:#606e7f}
+table.share_status.dash tbody td.blue{color:#606e7f}
 table.share_status.dash.line tbody tr.wide{height:40px;line-height:40px}
 table.share_status.dash.line tbody td{padding:3px 4px 3px 10px}
 table.share_status.dash.line tr>td{width:25%}
@@ -186,7 +186,7 @@ tr.past{color:#D63301;background-color:#FFDDD1}
 [name=arrayOps]{margin-top:12px}
 span.error{color:#F0000C;background-color:#FF9E9E;display:block;width:100%}
 span.warn{color:#E68A00;background-color:#FEEFB3;display:block;width:100%}
-span.system{color:#00529B;background-color:#BDE5F8;display:block;width:100%}
+span.system{color:#00529b;background-color:#BDE5F8;display:block;width:100%}
 span.array{color:#4F8A10;background-color:#DFF2BF;display:block;width:100%}
 span.login{color:#D63301;background-color:#FFDDD1;display:block;width:100%}
 span.lite{background-color:#121510}
@@ -218,14 +218,14 @@ img.list{width:auto;max-width:48px;height:48px}
 div.content{position:absolute;top:0;left:0;width:100%;padding-bottom:30px;z-index:-1;clear:both}
 div.content.shift{margin-top:1px}
 label+.content{margin-top:64px}
-div.tabs{position:relative;margin:110px 30px 30px 100px;background-color:#1B1D1B}
+div.tabs{position:relative;margin:110px 30px 30px 100px;background-color:#1b1d1b}
 div.tab{float:left;margin-top:23px}
 div.tab input[id^='tab']{display:none}
-div.tab [type=radio]+label:hover{cursor:pointer;border-color:#0072C6;opacity:1}
-div.tab [type=radio]:checked+label{cursor:default;background:transparent;color:#606E7F;border-color:#004E86;opacity:1}
+div.tab [type=radio]+label:hover{cursor:pointer;border-color:#0072c6;opacity:1}
+div.tab [type=radio]:checked+label{cursor:default;background:transparent;color:#606e7f;border-color:#004E86;opacity:1}
 div.tab [type=radio]+label~.content{display:none}
 div.tab [type=radio]:checked+label~.content{display:inline}
-div.tab [type=radio]+label{position:relative;letter-spacing:2px;padding:10px 10px;margin-right:2px;border-top-left-radius:12px;border-top-right-radius:12px;background:#606E7F;color:#B0B0B0;border:#8B98A7 1px solid;border-bottom:none;opacity:0.5}
+div.tab [type=radio]+label{position:relative;letter-spacing:2px;padding:10px 10px;margin-right:2px;border-top-left-radius:12px;border-top-right-radius:12px;background:#606e7f;color:#b0b0b0;border:#8B98A7 1px solid;border-bottom:none;opacity:0.5}
 div.tab [type=radio]+label img{display:none}
 div.Panel{width:25%;height:auto;float:left;margin:0;padding:5px;border-right:#0C0F0B 1px solid;border-bottom:#0C0F0B 1px solid;box-sizing:border-box}
 div.Panel:hover{background-color:#121510}
