--- a/plugins/dynamix/styles/default-white.css
+++ b/plugins/dynamix/styles/default-white.css
@@ -43,16 +43,16 @@ select.auto{min-width:auto}
 select.slot{min-width:440px;max-width:440px}
 input.narrow{width:166px}
 input.trim{width:50px}
-#header{position:fixed;top:0;left:0;width:100%;height:140px;z-index:100;margin:0;background:#1c1b1b}
-#header.image{background-size:100% 90px;background-repeat:no-repeat;color:#f2f2f2}
-#header .logo{float:left;margin-top:34px;margin-left:11px}
-#header .logo svg{margin-right:180px;height:40px}
-#header .logo a span{color:#ff8c2f;font-size:24px;font-weight:bold;float:right;background-color:rgba(28,27,27,0.4);border-radius:10px;padding:6px 20px}
-#header .block{margin:2px 2px 0 0;float:right;text-align:right;background-color:rgba(28,27,27,0.4);border-radius:10px;padding:5px 10px}
-#header .text-left{float:left;text-align:right;color:#f2f2f2;padding-right:5px;border-right:solid medium #f15a2c}
-#header .text-right{float:right;color:#f2f2f2;text-align:left;padding-left:5px}
-#header .text-right a{color:#ff8c2f}
-#header #licensetype{font-weight:bold;font-style:italic}
+#header{position:fixed;top:0;left:0;width:100%;height:140px;z-index:100;margin:0;color:#f2f2f2;background:#1c1b1b}
+#header.image{background-size:100% 90px;background-repeat:no-repeat}
+#header .logo{float:left;margin-left:10px;color:#e22828;font-size:24px;font-weight:bold;letter-spacing:2px}
+#header .logo svg{height:28px;display:block;margin:17px 50px 4px 0}
+#header .logo #licensetype{font-style:italic}
+#header .logo a{color:#e22828}
+#header .logo a span{margin-left:40px;letter-spacing:0}
+#header .block{margin:0;float:right;text-align:right;background-color:rgba(28,27,27,0.3);padding:7px 12px}
+#header .text-left{float:left;text-align:right;padding-right:5px;border-right:solid medium #f15a2c}
+#header .text-right{float:right;text-align:left;padding-left:5px}
 #title{margin:20px 0 32px 0;padding:8px 10px;clear:both;border-bottom:#e3e3e3 1px solid;background:#e8e8e8;letter-spacing:2px}
 #title span.left{font-size:15px}
 #title span.right{font-size:13px;padding-top:2px;padding-right:10px;float:right}
@@ -60,18 +60,16 @@ input.trim{width:50px}
 #menu{position:fixed;top:100px;left:0;width:100%;height:32px;line-height:32px;padding:0;margin:0;background:#1c1b1b;z-index:101}
 #nav-block{overflow:hidden;height:38px;letter-spacing:2px}
 #nav-left{float:left}
-#nav-right{border-right:none;float:right}
-#nav-block #nav-item{display:block;float:left;text-align:center;margin:0 2px;transition:0.3s background-color ease}
-#nav-block #nav-user{display:block;float:left;text-align:center;border:none}
-#nav-right #nav-item{border-right:none}
+#nav-right{float:right}
+#nav-block #nav-item,#nav-block #nav-user{float:left;display:block;text-align:center;margin:0}
 #nav-block #nav-item .system{vertical-align:middle;padding-bottom:2px;padding-right:4px}
-#nav-block #nav-user .probe{font-size:13px;margin-left:3px;margin-right:8px}
-#nav-block #nav-item:hover{border-bottom:5px solid #ff8c2f;-webkit-transition:all 0.3s ease-in-out;transition:all 0.3s ease-in-out}
-#nav-block #nav-item.active{color:#f2f2f2;border-bottom:5px solid #ff8c2f}
-#nav-block #nav-item a{color:#f2f2f2;text-transform:uppercase;font-weight:bold;display:block;padding:0 8px;min-width:32px}
-#nav-block #nav-item a:hover{color:#f2f2f2;text-decoration:none}
-#nav-block #nav-item.active a{color:#f2f2f2}
-#nav-block #nav-item.active:hover a{color:#f2f2f2;text-decoration:none}
+#nav-block #nav-user .probe{margin-left:3px;margin-right:8px}
+#nav-block #nav-item a{color:#f2f2f2;background-color:transparent;text-transform:uppercase;font-weight:bold;display:block;padding:0 10px}
+#nav-block #nav-item a{text-decoration:none;text-decoration-skip-ink:auto;-webkit-text-decoration-skip:objects;-webkit-transition:all .25s ease-out;transition:all .25s ease-out}
+#nav-block #nav-item{position:relative}
+#nav-block #nav-item:after{border-radius:.125rem;display:block;background-color:transparent;content:"";width:32px;height:2px;bottom:2px;position:absolute;left:50%;margin-left:-18px;-webkit-transition:all .25s ease-in-out;transition:all .25s ease-in-out;pointer-events:none}
+#nav-block #nav-item:focus:after,#nav-block #nav-item:hover:after{background-color:#f15a2c}
+#nav-block #nav-item.active:after{background-color:#f2f2f2}
 #txt-tub1,#txt-tub2,#txt-tub3{color:#f2f2f2}
 #clear{clear:both}
 #footer{position:fixed;bottom:0;left:0;color:#2b2a29;background:#d4d5d6;padding:5px 0;width:100%;height:16px;line-height:16px;text-align:center;z-index:100}
