Header style update

--- a/plugins/dynamix/styles/default-azure.css
+++ b/plugins/dynamix/styles/default-azure.css
@@ -48,7 +48,7 @@ form+p{display:none}
 #header .logo svg{height:28px;display:block;margin:17px 50px 4px 0}
 #header .logo #licensetype{font-style:italic}
 #header .logo a{color:#e22828}
-#header .logo a span{margin-left:40px;letter-spacing:0}
+#header .logo #licenseexpire{margin-left:40px;letter-spacing:0}
 #header .block{margin:0;float:right;text-align:right;background-color:rgba(237,234,239,0.7);padding:7px 12px}
 #header .text-left{float:left;text-align:right;padding-right:5px;border-right:solid medium #f15a2c}
 #header .text-right{float:right;text-align:left;padding-left:5px}
