--- a/plugins/dynamix/styles/default-white.css
+++ b/plugins/dynamix/styles/default-white.css
@@ -57,8 +57,8 @@ input.trim{width:50px}
 #title span.left{font-size:15px}
 #title span.right{font-size:13px;padding-top:2px;padding-right:10px;float:right}
 #title span img{padding-right:4px}
-#menu{position:fixed;top:94px;left:0;width:100%;height:32px;line-height:32px;padding:0;margin:0;background:#1c1b1b;z-index:101}
-#nav-block{overflow:hidden;height:38px;letter-spacing:2px}
+#menu{position:fixed;top:90px;left:0;width:100%;height:40px;line-height:40px;padding:0;margin:0;font-size:13px;background:#1c1b1b;z-index:101}
+#nav-block{overflow:hidden;height:40px;letter-spacing:2px}
 #nav-left{float:left}
 #nav-right{float:right}
 #nav-block #nav-item,#nav-block #nav-user{float:left;display:block;text-align:center;margin:0}
@@ -67,7 +67,7 @@ input.trim{width:50px}
 #nav-block #nav-item a{color:#f2f2f2;background-color:transparent;text-transform:uppercase;font-weight:bold;display:block;padding:0 10px}
 #nav-block #nav-item a{text-decoration:none;text-decoration-skip-ink:auto;-webkit-text-decoration-skip:objects;-webkit-transition:all .25s ease-out;transition:all .25s ease-out}
 #nav-block #nav-item{position:relative}
-#nav-block #nav-item:after{border-radius:.125rem;display:block;background-color:transparent;content:"";width:32px;height:2px;bottom:2px;position:absolute;left:50%;margin-left:-16px;-webkit-transition:all .25s ease-in-out;transition:all .25s ease-in-out;pointer-events:none}
+#nav-block #nav-item:after{border-radius:.125rem;display:block;background-color:transparent;content:"";width:32px;height:2px;bottom:7px;position:absolute;left:50%;margin-left:-16px;-webkit-transition:all .25s ease-in-out;transition:all .25s ease-in-out;pointer-events:none}
 #nav-block #nav-item:focus:after,#nav-block #nav-item:hover:after{background-color:#f15a2c}
 #nav-block #nav-item.active:after{background-color:#f2f2f2}
 #txt-tub1,#txt-tub2,#txt-tub3{color:#f2f2f2}
@@ -85,7 +85,7 @@ input.trim{width:50px}
 .orange-text,.warning{color:#E68A00}
 .blue-text{color:#3B5998}
 .grey-text{color:#404040}
-.usage-bar{float:left;height:20px;line-height:20px;width:130px;padding:1px 1px 1px 2px;margin:6px 12px;border-radius:3px;background-color:#585858;box-shadow:0 1px 0 #989898,inset 0 1px 0 #202020}
+.usage-bar{float:left;height:20px;line-height:20px;width:130px;padding:1px 1px 1px 2px;margin:8px 12px;border-radius:3px;background-color:#585858;box-shadow:0 1px 0 #989898,inset 0 1px 0 #202020}
 .usage-bar>span{display:block;height:100%;text-align:right;border-radius:2px;background-color:#808080;box-shadow:inset 0 1px 0 rgba(255,255,255,.5)}
 .usage-bar>span>span{padding:0 4px;font-size:13px;color:#f2f2f2}
 .usage-disk{height:20px;line-height:20px;padding:0;margin:0;border-radius:3px;background-color:#585858}
