--- a/plugins/dynamix/styles/default-black.css
+++ b/plugins/dynamix/styles/default-black.css
@@ -43,8 +43,7 @@ select.auto{min-width:auto}
 select.slot{min-width:440px;max-width:440px}
 input.narrow{width:166px}
 input.trim{width:50px}
-#header{position:fixed;top:0;left:0;width:100%;height:130px;z-index:100;margin:0;color:#1c1b1b;background:#f2f2f2}
-#header.image{background-size:100% 90px;background-repeat:no-repeat}
+#header{position:fixed;top:0;left:0;width:100%;height:90px;z-index:100;margin:0;color:#1c1b1b;background:#f2f2f2;background-size:100% 90px}
 #header .logo{float:left;margin-left:10px;color:#e22828;font-size:24px;font-weight:bold;letter-spacing:2px}
 #header .logo svg{height:28px;display:block;margin:17px 50px 4px 0}
 #header .logo #licensetype{font-style:italic}
