--- a/plugins/dynamix/styles/default-white.css
+++ b/plugins/dynamix/styles/default-white.css
@@ -43,15 +43,14 @@ select.auto{min-width:auto}
 select.slot{min-width:440px;max-width:440px}
 input.narrow{width:166px}
 input.trim{width:50px}
-#header{position:fixed;top:0;left:0;width:100%;height:90px;z-index:100;margin:0;color:#f2f2f2;background:#1c1b1b;background-size:100% 90px}
-#header .logo{float:left;margin-left:10px;color:#e22828;font-size:24px;font-weight:bold;letter-spacing:2px}
-#header .logo svg{height:28px;display:block;margin:17px 50px 4px 0}
-#header .logo #licensetype{font-style:italic}
-#header .logo a{color:#e22828}
-#header .logo #licenseexpire{margin-left:40px;letter-spacing:0}
+#header{position:fixed;top:0;left:0;width:100%;height:91px;z-index:100;margin:0;color:#f2f2f2;background:#1c1b1b;background-size:100% 90px;background-repeat:no-repeat}
+#header .logo{float:left;margin-left:10px;color:#e22828;width:160px;text-align:center}
+#header .logo svg{width:160px;display:block;margin:25px 50px 8px 0}
 #header .block{margin:0;float:right;text-align:right;background-color:rgba(28,27,27,0.3);padding:7px 12px}
 #header .text-left{float:left;text-align:right;padding-right:5px;border-right:solid medium #f15a2c}
 #header .text-right{float:right;text-align:left;padding-left:5px}
+#header .text-right a{color:#f2f2f2}
+#header .text-right #licensetype{font-weight:bold;font-style:italic;margin-right:4px}
 #title{margin:20px 0 32px 0;padding:8px 10px;clear:both;border-bottom:#e3e3e3 1px solid;background:#e8e8e8;letter-spacing:2px}
 #title span.left{font-size:15px}
 #title span.right{font-size:13px;padding-top:2px;padding-right:10px;float:right}
