Corrections in notice message display

--- a/plugins/dynamix/Shares.page
+++ b/plugins/dynamix/Shares.page
@@ -4,7 +4,7 @@ Code="f07b"
 ----
 <?PHP
 if ($var['fsState']=="Stopped") {
-  echo "<p class='notice'>Array must be <span class='strong big'>Started</span> to view Shares.</p>";
+  echo "<p class='notice shift'>Array must be <span class='strong big'>Started</span> to view Shares.</p>";
   return;
 }
 if (count($pages)==2) $tabbed = false;
