--- a/plugins/dynamix.vm.manager/VMs.page
+++ b/plugins/dynamix.vm.manager/VMs.page
@@ -17,11 +17,11 @@ Cond="exec(\"grep -o '^SERVICE=.enable' /boot/config/domain.cfg 2>/dev/null\")"
 ?>
 <?
 if ($var['fsState'] != "Started") {
-  echo "<p class='notice'>Array must be <span class='strong big'>started</span> to view Virtual Machines.</p>";
+  echo "<p class='notice shift'>Array must be <span class='strong big'>started</span> to view Virtual Machines.</p>";
   return;
 }
 if (!is_file('/var/run/libvirt/libvirtd.pid') || (!is_dir('/proc/'.@file_get_contents('/var/run/libvirt/libvirtd.pid')))) {
-  echo "<p class='notice'>Libvirt Service failed to start.</p>";
+  echo "<p class='notice shift'>Libvirt Service failed to start.</p>";
   return;
 }
 
