--- a/plugins/dynamix/styles/default-black.css
+++ b/plugins/dynamix/styles/default-black.css
@@ -6,6 +6,7 @@ body{font-size:14px;color:#f2f2f2;background:#1c1b1b;padding:0;margin:0;-webkit-
 img{border:0;text-decoration:none;vertical-align:middle}
 p{text-align:justify}
 p.centered{text-align:left}
+p:empty{display:none}
 a:hover{text-decoration:underline}
 a{color:#486dba;text-decoration:none}
 a.none{color:#f2f2f2}
@@ -188,9 +189,9 @@ span.label{font-size:13px;padding:2px 0 2px 6px;margin-right:6px;border-radius:4
 span.temp-text{font-size:13px;color:#4F8A10}
 span.heat-text{font-size:13px;color:#F0000C}
 span.cpu-speed{display:block;color:#3B5998}
-span.status{float:right;font-size:16px;margin-top:48px;padding-right:8px;letter-spacing:2px}
+span.status{float:right;font-size:16px;margin-top:30px;padding-right:8px;letter-spacing:2px}
 span.status.vhshift{margin-top:0;margin-right:0}
-span.status.vshift{margin-top:-20px}
+span.status.vshift{margin-top:-19px}
 span.status.hshift{margin-right:-20px}
 span.diskinfo{float:left;clear:both;margin-top:5px;padding-left:10px}
 span.bitstream{font-family:bitstream;font-size:12px}
@@ -208,11 +209,11 @@ i.nolock{visibility:hidden;margin-right:8px}
 i.lock{margin-left:8px;cursor:default}
 img.icon{margin:-3px 4px 0 0}
 img.list{width:auto;max-width:48px;height:48px}
-div.content{position:absolute;top:20px;left:0;width:100%;padding-bottom:30px;z-index:-1;clear:both}
+div.content{position:absolute;top:0;left:0;width:100%;padding-bottom:30px;z-index:-1;clear:both}
 div.content.shift{margin-top:1px}
-label+.content{margin-top:87px}
+label+.content{margin-top:86px}
 div.tabs{position:relative;margin:130px 0 0 0}
-div.tab{float:left;margin-top:47px}
+div.tab{float:left;margin-top:30px}
 div.tab input[id^="tab"]{display:none}
 div.tab [type=radio]+label:hover{background:transparent;border:1px solid #ff8c2f;border-bottom:none;cursor:pointer;opacity:1}
 div.tab [type=radio]:checked+label{cursor:default;background:transparent;border:1px solid #ff8c2f;border-bottom:none;opacity:1}
