--- a/plugins/dynamix/styles/default-black.css
+++ b/plugins/dynamix/styles/default-black.css
@@ -126,6 +126,7 @@ table.array_status tr>td{text-align:left;white-space:nowrap;padding-left:12px;wi
 table.array_status tr>td+td{padding-left:2px;width:20%}
 table.array_status tr>td+td+td{width:auto}
 table.array_status td.line{border-top:1px solid #2b2b2b}
+table.array_status.shift{margin-top:-30px}
 table.settings{margin:0;padding:0px}
 table.settings td:first-child{width:35%;padding-left:12px}
 table.settings.shifted{padding:0;margin-left:0;margin-top:0}
